[package]
name = "map_generation"
version = "0.1.0"
edition = "2021"

[dependencies]
# generating image
noise = "0.9.0"
image = "0.25.1"
rand = "0.8.5"
crossbeam = "0.8.4"
num_cpus = "1.16.0"

# user config parsing
clap = { version = "4.5.8", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
